--- a/exchange-api-gateway-service/src/main/resources/application.properties
+++ b/exchange-api-gateway-service/src/main/resources/application.properties
@@ -2,3 +2,12 @@ server.port=8765
 spring.application.name=exchange-api-gateway-service
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+spring.cloud.gateway.routes[0].id=currency-converter
+spring.cloud.gateway.routes[0].uri=lb://currency-conversion-service
+spring.cloud.gateway.routes[0].predicates[0]=Path=/currency-converter/from/{from}/to/{to}/quantity/{quantity}
+spring.cloud.gateway.routes[0].predicates[1]=Method=GET
+spring.cloud.gateway.routes[0].filters[0]=RemoveRequestHeader=Cookie
