--- a/exchange-api-gateway-service/src/main/resources/application.properties
+++ b/exchange-api-gateway-service/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.cloud.gateway.routes[0].uri=lb://currency-conversion-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/currency-converter/from/{from}/to/{to}/quantity/{quantity}
 spring.cloud.gateway.routes[0].predicates[1]=Method=GET
 spring.cloud.gateway.routes[0].filters[0]=RemoveRequestHeader=Cookie
+spring.cloud.gateway.routes[0].filters[1]=AuthorizationHeaderFilters
+
+management.endpoints.web.exposure.include=*
