--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 spring.application.name=currency-conversion-service
 server.port=8200
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+######  Swagger properties ######
+swagger.info.title=Currency conversion API
+swagger.info.description=Sample API for skill up course
+swagger.info.version=1.0
+swagger.info.termsOfServiceUrl=Free to use
+swagger.info.contact.name=Perko Denys
+swagger.info.contact.url=denisperko57@gmail.com
+swagger.info.contact.email=denisperko57@gmail.com
+swagger.info.license=API License
+swagger.info.licenseUrl=denisperko57@gmail.com
