add docker compose

--- a/exchange-authentication-service/src/main/resources/application.properties
+++ b/exchange-authentication-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=exchange-authentication-service
 server.port=8100
 
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 token.secret=fn4k32lkfds34
