--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=currency-conversion-service
 server.port=8200
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 ######  Swagger properties ######
 swagger.info.title=Currency conversion API
