--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=currency-exchange-service
 server.port=8000
 
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
