--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -7,8 +7,8 @@ swagger.info.title=Currency conversion API
 swagger.info.description=Sample API for skill up course
 swagger.info.version=1.0
 swagger.info.termsOfServiceUrl=Free to use
-swagger.info.contact.name=Perko Denys
-swagger.info.contact.url=denisperko57@gmail.com
-swagger.info.contact.email=denisperko57@gmail.com
+swagger.info.contactName=Perko Denys
+swagger.info.contactUrl=denisperko57@gmail.com
+swagger.info.contactEmail=denisperko57@gmail.com
 swagger.info.license=API License
 swagger.info.licenseUrl=denisperko57@gmail.com
