--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -2,3 +2,14 @@ spring.application.name=currency-exchange-service
 server.port=8000
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+######  Swagger properties ######
+swagger.info.title=Currency conversion API
+swagger.info.description=Sample API for skill up course
+swagger.info.version=1.0
+swagger.info.termsOfServiceUrl=Free to use
+swagger.info.contact.name=Perko Denys
+swagger.info.contact.url=denisperko57@gmail.com
+swagger.info.contact.email=denisperko57@gmail.com
+swagger.info.license=API License
+swagger.info.licenseUrl=denisperko57@gmail.com
