--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=currency-conversion-service
-server.port=8200
+server.port=${PORT:0}
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 ######  Swagger properties ######
