--- a/exchange-authentication-service/src/main/resources/application.properties
+++ b/exchange-authentication-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=exchange-authentication-service
-server.port=8100
+server.port=${PORT:0}
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
